--- a/src/search/search.less
+++ b/src/search/search.less
@@ -1,8 +1,10 @@
 @font-face{
     font-family: 'FZCSJW';
-    src:url(./FZCSJW.ttf)
+    src:url(../assets/FZCSJW.ttf)
 }
 .search-text{
+    display: flex;
+    border-radius: 10px;
     border: 1px solid #000;
     font-family: 'FZCSJW';
 }
